--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
   "name": "bigquery2jsonfile",
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/sakamossan/bigquery2jsonfile"
+  },
   "version": "1.0.0",
   "description": "Query bigquery to generate a properly typed json file",
   "main": "index.js",
   "dependencies": {
     "@google-cloud/bigquery": "^4.3.0",
-    "camelcase-keys": "^6.1.0"
+    "camelcase-keys": "^6.1.0",
+    "commander": "^3.0.2"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "bin": {
+    "bigquery2jsonfile": "index.js"
   },
   "keywords": [
     "bigquery",
