--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "bigquery2jsonfile",
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/sakamossan/bigquery2jsonfile"
+    "type": "git",
+    "url": "https://github.com/sakamossan/bigquery2jsonfile"
   },
   "version": "1.0.2",
   "description": "Query bigquery to generate a properly typed json file",
   "main": "index.js",
   "dependencies": {
     "@google-cloud/bigquery": "^4.3.0",
+    "@google-cloud/storage": "^4.1.3",
     "camelcase-keys": "^6.1.0",
     "commander": "^3.0.2"
   },
